--- a/Assets/Css/index.css
+++ b/Assets/Css/index.css
@@ -28,7 +28,7 @@
     font-family: 'Doppio One', 'sans-serif';
     box-sizing: border-box;
 }
-.btn:hover {
+.btn:hover, .AnimationOff:hover {
     cursor: pointer;
     opacity: 0.7;
 }
@@ -94,4 +94,5 @@
     margin: auto;
     margin-top: 10;
     cursor: pointer;
+    border-radius: 5px;
 }
